added images to meet the team

--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -40,7 +40,7 @@ import Container from "@/components/container.astro";
             <div class="text-center">
               <div class="w-48 h-48 mx-auto mb-6 rounded-full overflow-hidden border-4 border-yellow/30">
                 <img
-                  src=""
+                  src="/public/chris_s.png"
                   alt="Chris Silver"
                   class="w-full h-full object-cover"
                 />
@@ -57,7 +57,7 @@ import Container from "@/components/container.astro";
             <div class="text-center">
               <div class="w-48 h-48 mx-auto mb-6 rounded-full overflow-hidden border-4 border-blue/30">
                 <img
-                  src=""
+                  src="/public/lou.png"
                   alt="Louise Knight"
                   class="w-full h-full object-cover"
                 />
@@ -74,7 +74,7 @@ import Container from "@/components/container.astro";
             <div class="text-center">
               <div class="w-48 h-48 mx-auto mb-6 rounded-full overflow-hidden border-4 border-green/30">
                 <img
-                  src=""
+                  src="/public/chris_r.png"
                   alt="Chris Rocheleau"
                   class="w-full h-full object-cover"
                 />
