added fb tracking

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Hero from "@/components/hero.astro";
 import Layout from "@/layouts/Layout.astro";
 ---
 
-<Layout title="">
+<Layout title="" visioptPid={168}>
   <Container>
     <Hero />
   </Container>
