--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -3,7 +3,7 @@ import Layout from "@/layouts/Layout.astro";
 import Container from "@/components/container.astro";
 ---
 
-<Layout title="Meet the Team">
+<Layout title="Meet the Team" visioptPid={170}>
   <div class="bg-navy">
     <Container>
       <!-- Page Header -->
